--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,21 +14,18 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Your awesome title
-email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
 
-# Build settings
-markdown: kramdown
-#theme: minima
+permalink: pretty
+
 #theme: just-the-docs
 remote_theme: pmarsceill/just-the-docs
+
 plugins:
   - jekyll-feed
 
@@ -43,3 +40,19 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+# Enable or disable the site search
+# Supports true (default) or false
+search_enabled: true
+
+aux_links:
+  "Just the Docs on GitHub":
+    - "//github.com/pmarsceill/just-the-docs"
+
+# Supports true (default) or false/nil
+heading_anchors: true
+
+# Color scheme currently only supports "dark" or nil (default)
+color_scheme: "dark"
+
+
